refactor: updated rnn_tensorflow notebook

--- a/RNN/RNN_Tensorflow.ipynb
+++ b/RNN/RNN_Tensorflow.ipynb
@@ -20,12 +20,12 @@
    "metadata": {},
    "source": [
     "## Table of Contents\n",
-    "1.  [Visualizing the RNN](#visualizing-the-rnn)\n",
-    "2.  [Clarifying the Dimensions](#clarifying-the-dimensions)\n",
-    "3.  [The SimpleRNNCell API](#the-simplernncell-api)\n",
-    "4.  [The SimpleRNN API](#the-simplernn-api)\n",
-    "5.  [The StackedRNNCells API](#the-stackedrnncells-api)\n",
-    "6.  [The RNN API](#the-rnn-api)"
+    "1.  [Visualizing the RNN](#visualize)\n",
+    "2.  [Clarifying the Dimensions](#dims)\n",
+    "3.  [The SimpleRNNCell API](#simplernncell)\n",
+    "4.  [The SimpleRNN API](#simplernn)\n",
+    "5.  [The StackedRNNCells API](#stacked)\n",
+    "6.  [The RNN API](#rnn)"
    ]
   },
   {
@@ -34,8 +34,8 @@
    "id": "64316079",
    "metadata": {},
    "source": [
-    "## Visualizing the RNN\n",
-    "<img align=\"left\" src=\"./images/RNN_rolled3.png\" width=\"500px\" style=\"margin-right: 50px;\"/>\n",
+    "## Visualizing the RNN <a id=\"visualize\"></a>\n",
+    "<img align=\"left\" src=\"./images/RNN_rolled.png\" width=\"500px\" style=\"margin-right: 50px;\"/>\n",
     "\n",
     "### Notations\n",
     "-   $ X_{t} $: Input at time $ t $\n",
@@ -75,7 +75,7 @@
    "id": "45a7d1a5",
    "metadata": {},
    "source": [
-    "## Clarifying the dimensions\n",
+    "## Clarifying the dimensions <a id=\"dims\"></a>\n",
     "Without loss of generality, let the $ i^{th} $ input sample be denoted as $ X^{(i)} $.\n",
     "\n",
     "$ X^{(i)} = \\begin{bmatrix} X^{(i)}_1 \\\\ X^{(i)}_2 \\\\ \\vdots \\\\ X^{(i)}_T \\end{bmatrix} $\n",
@@ -119,8 +119,8 @@
    "id": "15f2858e",
    "metadata": {},
    "source": [
-    "## The `SimpleRNNCell` API\n",
-    "This is an RNN *cell* that takes 2 arguments - $ X_{t} $ and $ h_{t-1} $ to produce the output and the next state $ h_{t} $.\n",
+    "## The `SimpleRNNCell` API <a id=\"simplernncell\"></a>\n",
+    "This is an RNN *cell* , which when *called*, takes 2 arguments - $ X_{t} $ and $ h_{t-1} $ to produce the output and the next state $ h_{t} $.\n",
     "As previously stated, the output is the same as the new hidden state\n",
     "\n",
     "Because this is a *cell*, it performs the computation for only the provided timestep. Thus, the input to this API is of shape `[batch, feature]`"
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "e512ebf8",
    "metadata": {},
    "outputs": [
@@ -153,10 +153,10 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(\n",
-      "[[-0.8341169   1.3389874 ]\n",
-      " [-0.83408976  1.3240114 ]\n",
-      " [-0.83412457  1.3432255 ]\n",
-      " [-0.83383614  1.184167  ]], shape=(4, 2), dtype=float32)\n"
+      "[[0.47837692 0.9902846 ]\n",
+      " [0.6551285  1.0892183 ]\n",
+      " [0.7130833  1.1216575 ]\n",
+      " [0.6351037  1.0780097 ]], shape=(4, 2), dtype=float32)\n"
      ]
     }
    ],
@@ -178,27 +178,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "8260ef30",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(rnn_cell.get_weights())"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "9c08ce39",
@@ -216,7 +195,7 @@
    "id": "33e8f580",
    "metadata": {},
    "source": [
-    "## The `SimpleRNN` API \n",
+    "## The `SimpleRNN` API <a id=\"simplernn\"></a>\n",
     "The `SimpleRNNCell` API computes the state / output for only the given timestamp.\n",
     "But what if we want the final result, (i.e) the one obtained after performing the required computation across all timestamps of the input? \n",
     "\n",
@@ -269,7 +248,7 @@
    "id": "251e1bde",
    "metadata": {},
    "source": [
-    "## Where are the weights?\n",
+    "## Where are the weights? <a id=\"weights\"></a>\n",
     "Use the `get_weights()` method to get the weights of the RNN"
    ]
   },
@@ -349,7 +328,7 @@
    "id": "3cda80f8",
    "metadata": {},
    "source": [
-    "## The `StackedRNNCells` API\n",
+    "## The `StackedRNNCells` API <a id=\"stacked\"></a>\n",
     "What if you wanted the output of one cell to be given as input to another cell? \n",
     "\n",
     "<img src=\"./images/stackedRNNCells.png\" width=\"500px\">"
@@ -392,44 +371,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "id": "e9c12165",
+   "execution_count": 7,
+   "id": "3718ddc9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(\n",
-      "[[0.00222209 0.00071907]\n",
-      " [0.00079629 0.00025768]\n",
-      " [0.01755816 0.00568231]\n",
-      " [0.04440635 0.01437828]], shape=(4, 2), dtype=float32)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(4, 1), dtype=float32, numpy=\n",
+       " array([[0.71947163],\n",
+       "        [0.3826521 ],\n",
+       "        [0.2337083 ],\n",
+       "        [0.43024176]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(4, 2), dtype=float32, numpy=\n",
+       " array([[-0.6549138 ,  0.69779426],\n",
+       "        [-0.39431095,  0.42925397],\n",
+       "        [-0.24925856,  0.27320802],\n",
+       "        [-0.4371829 ,  0.4746568 ]], dtype=float32)>)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# define the inputs\n",
-    "X_1 = inputs_to_play[:, 0, :]  # consider the samples at timestamp 0\n",
-    "\n",
-    "# the initial states\n",
-    "h_0 = [\n",
-    "    tf.constant(\n",
-    "    np.zeros(shape=(batch,1), dtype=np.float32)  # for cell1\n",
-    "    ),\n",
-    "    tf.constant(\n",
-    "    np.zeros(shape=(batch,2), dtype=np.float32)  # for cell2\n",
-    "    )\n",
-    "]\n",
-    "\n",
-    "# \"call\" the Stacked RNN cell on these inputs\n",
-    "output, h_1 = stacked_rnn(\n",
-    "    inputs=X_1,\n",
-    "    states=h_0,\n",
-    ")\n",
-    "\n",
-    "print(output)\n",
-    "# same as `print(h_1)`"
+    "# new states of both cells are returned\n",
+    "h_1"
    ]
   },
   {
@@ -457,9 +425,18 @@
    "id": "349f98c3",
    "metadata": {},
    "source": [
-    "## The `RNN` API\n",
+    "## The `RNN` API <a id=\"rnn\"></a>\n",
     "The mother of all RNN APIs! This API can be used to wrap any *cell* into an RNN encapsulation so that the input is applied across all timestamps. \n",
     "Just like how `SimpleRNN` uses `SimpleRNNCell` for its internal computation, the `RNN` API takes *any* kind of cell (`SimpleRNNCell`, `StackedRNNCell`, ...) and uses that cell to compute across all timestamps of the input"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e8488145",
+   "metadata": {},
+   "source": [
+    "<img src=\"./images/RNN.gif\" width=\"600px\">"
    ]
   },
   {
@@ -493,25 +470,6 @@
     ")\n",
     "\n",
     "output"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "854a2f12",
-   "metadata": {},
-   "source": [
-    "Note that the below:\n",
-    "```python\n",
-    "tf.keras.layers.RNN(\n",
-    "    tf.keras.layers.SimpleRNNCell(units=2)\n",
-    ")\n",
-    "```\n",
-    "is equivalent to\n",
-    "```python\n",
-    "tf.keras.SimpleRNN(units=2)\n",
-    "```\n",
-    "***provided*** the `activation`, `kernel_initializer` and the  `recurrent_initializer` in both are the same  "
    ]
   }
  ],
