fix: fixed stackedRNN image

--- a/RNN/RNN_Tensorflow.ipynb
+++ b/RNN/RNN_Tensorflow.ipynb
@@ -331,7 +331,7 @@
     "## The `StackedRNNCells` API <a id=\"stacked\"></a>\n",
     "What if you wanted the output of one cell to be given as input to another cell? \n",
     "\n",
-    "<img src=\"./images/stackedRNNCells.png\" width=\"500px\">"
+    "<img src=\"./images/stackedRNNCells.png\" width=\"600px\" />"
    ]
   },
   {
