updated stock prediction example

--- a/RNN/RNN_example_LSTM.ipynb
+++ b/RNN/RNN_example_LSTM.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,8 +136,9 @@
        "(1229, 1)"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -146,16 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow as tf\n",
     "from tensorflow.keras import layers, Sequential"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -178,81 +180,82 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "39/39 [==============================] - 2s 12ms/step - loss: 934.0297 - val_loss: 848.4723\n",
+      "39/39 [==============================] - 3s 21ms/step - loss: 888.1685 - val_loss: 816.7823\n",
       "Epoch 2/25\n",
-      "39/39 [==============================] - 0s 5ms/step - loss: 830.0425 - val_loss: 745.9431\n",
+      "39/39 [==============================] - 0s 7ms/step - loss: 797.4676 - val_loss: 751.3549\n",
       "Epoch 3/25\n",
-      "39/39 [==============================] - 0s 4ms/step - loss: 723.4783 - val_loss: 648.7867\n",
+      "39/39 [==============================] - 0s 7ms/step - loss: 707.8855 - val_loss: 624.2955\n",
       "Epoch 4/25\n",
-      "39/39 [==============================] - 0s 5ms/step - loss: 648.5870 - val_loss: 591.6568\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 604.1218 - val_loss: 555.8630\n",
       "Epoch 5/25\n",
-      "39/39 [==============================] - 0s 8ms/step - loss: 592.2472 - val_loss: 547.3132\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 518.2236 - val_loss: 454.6849\n",
       "Epoch 6/25\n",
-      "39/39 [==============================] - 0s 7ms/step - loss: 552.1758 - val_loss: 510.4150\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 433.9761 - val_loss: 394.6521\n",
       "Epoch 7/25\n",
-      "39/39 [==============================] - 1s 14ms/step - loss: 515.6868 - val_loss: 476.3981\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 386.9225 - val_loss: 357.6775\n",
       "Epoch 8/25\n",
-      "39/39 [==============================] - 0s 8ms/step - loss: 481.9489 - val_loss: 445.2462\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 352.9790 - val_loss: 326.6665\n",
       "Epoch 9/25\n",
-      "39/39 [==============================] - 0s 6ms/step - loss: 450.6854 - val_loss: 416.1951\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 324.2498 - val_loss: 300.4897\n",
       "Epoch 10/25\n",
-      "39/39 [==============================] - 0s 4ms/step - loss: 421.6995 - val_loss: 389.2437\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 299.5553 - val_loss: 277.5952\n",
       "Epoch 11/25\n",
-      "39/39 [==============================] - 0s 5ms/step - loss: 394.5829 - val_loss: 364.4434\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 278.0466 - val_loss: 257.4103\n",
       "Epoch 12/25\n",
-      "39/39 [==============================] - 0s 7ms/step - loss: 369.6638 - val_loss: 341.2488\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 258.8752 - val_loss: 239.9719\n",
       "Epoch 13/25\n",
-      "39/39 [==============================] - 0s 5ms/step - loss: 346.5727 - val_loss: 320.1664\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 242.1239 - val_loss: 224.2919\n",
       "Epoch 14/25\n",
-      "39/39 [==============================] - 0s 4ms/step - loss: 325.2373 - val_loss: 300.8604\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 227.2638 - val_loss: 210.3025\n",
       "Epoch 15/25\n",
-      "39/39 [==============================] - 0s 6ms/step - loss: 305.7550 - val_loss: 282.7538\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 214.2206 - val_loss: 198.1017\n",
       "Epoch 16/25\n",
-      "39/39 [==============================] - 0s 11ms/step - loss: 287.6750 - val_loss: 266.4843\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 202.6536 - val_loss: 187.6174\n",
       "Epoch 17/25\n",
-      "39/39 [==============================] - 0s 5ms/step - loss: 271.1744 - val_loss: 251.6563\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 192.2894 - val_loss: 177.5563\n",
       "Epoch 18/25\n",
-      "39/39 [==============================] - 0s 5ms/step - loss: 256.0691 - val_loss: 238.1610\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 181.9205 - val_loss: 164.8816\n",
       "Epoch 19/25\n",
-      "39/39 [==============================] - 0s 7ms/step - loss: 241.9457 - val_loss: 224.2042\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 165.4806 - val_loss: 149.6225\n",
       "Epoch 20/25\n",
-      "39/39 [==============================] - 0s 7ms/step - loss: 227.5655 - val_loss: 211.2080\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 152.5461 - val_loss: 137.6276\n",
       "Epoch 21/25\n",
-      "39/39 [==============================] - 0s 7ms/step - loss: 214.1332 - val_loss: 198.6254\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 140.3868 - val_loss: 126.6432\n",
       "Epoch 22/25\n",
-      "39/39 [==============================] - 0s 7ms/step - loss: 201.0780 - val_loss: 186.5315\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 129.7065 - val_loss: 116.5150\n",
       "Epoch 23/25\n",
-      "39/39 [==============================] - 0s 9ms/step - loss: 188.7927 - val_loss: 175.3297\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 119.8223 - val_loss: 107.2409\n",
       "Epoch 24/25\n",
-      "39/39 [==============================] - 0s 7ms/step - loss: 177.2894 - val_loss: 164.5814\n",
+      "39/39 [==============================] - 0s 6ms/step - loss: 110.6707 - val_loss: 98.8182\n",
       "Epoch 25/25\n",
-      "39/39 [==============================] - 0s 6ms/step - loss: 166.2538 - val_loss: 154.5195\n"
+      "39/39 [==============================] - 0s 6ms/step - loss: 102.3333 - val_loss: 91.0022\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1f0b09a7100>"
+       "<keras.callbacks.History at 0x1dd08b0d540>"
       ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# RNNcells = [tf.keras.layers.SimpleRNNCell(n_neurons) for _ in range(n_layers)]\n",
-    "# rnn = tf.keras.layers.StackedRNNCells(RNNcells, input_shape = (5, n_inputs))\n",
-    "# rnn = tf.keras.layers.SimpleRNNCell(n_neurons)\n",
-    "rnn = tf.keras.layers.SimpleRNN(n_neurons)\n",
     "RNNmodel = Sequential()\n",
-    "# RNNmodel.add(layers.RNN(\n",
-    "#     [\n",
-    "#         tf.keras.layers.SimpleRNNCell(n_neurons),\n",
-    "#         tf.keras.layers.LSTMCell(n_neurons)\n",
-    "#     ]\n",
-    "# ))\n",
-    "RNNmodel.add(rnn)\n",
-    "# RNNmodel.add(layers.Dense(64, activation='relu'))\n",
+    "RNNmodel.add(\n",
+    "    layers.LSTM(n_neurons)\n",
+    ")\n",
+    "# RNNmodel.add(\n",
+    "#     layers.RNN(\n",
+    "#         layers.StackedRNNCells(\n",
+    "#             [\n",
+    "#                 layers.LSTMCell(n_neurons) for _ in range(n_layers)\n",
+    "#             ]\n",
+    "#         )\n",
+    "#     )\n",
+    "# )\n",
     "RNNmodel.add(layers.Dense(n_outputs, activation='linear'))\n",
     "\n",
     "RNNmodel.compile(\n",
@@ -271,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -288,40 +291,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([16.783026], dtype=float32)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted: [25.036465], Actual: [25.54]\n"
+     ]
     }
    ],
    "source": [
-    "ans[100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([16.91], dtype=float32)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "y_test[100]"
+    "# compare predicted and actual value\n",
+    "idx = 14  # change this to see for a different example\n",
+    "print(\"Predicted: {}, Actual: {}\".format(ans[idx], y_test[idx]))"
    ]
   },
   {
@@ -494,8 +478,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
