--- a/RNN/RNN_Tensorflow.ipynb
+++ b/RNN/RNN_Tensorflow.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Are you in a position where you feel like you've a good theoretical knowlege on these Deep Learning models, but when you look at the API docs, everything seems completely different (Has your brain underfit)? If so, then this notebook is just for you! It maps the concepts and equations that you know, to the corresponding APIs in Tensorflow. Let's get started!\n",
     "\n",
-    "**Note**: It is assumed that the reader has a reasonably good theoretical knowledge on these topics. If not, check out the below links!"
+    "**Note**: It is assumed that the reader has a reasonably good theoretical knowledge on these topics."
    ]
   },
   {
